AllOverIt
  * Added static Create() factory method to EnrichedEnumTypeConverter
  * Added IsSubClassOfRawGeneric() and improved IsDerivedFrom() to consider open/unbound generics

AllOverIt.EntityFramework
  * Updated ModelBuilderExtensions() to return ModelBuilder to allow for a fluent syntax

AllOverIt.Serialization
  * New package

AllOverIt.Serialization.NewtonsoftJson
  * Moved caching from JsonConverterFactory to EnrichedEnumJsonConverterFactory. Now optional, on by default.
  * Added JsonHelper to support extracting property values from a JSON string (or object)

AllOverIt.Serialization.SystemTextJson
  * Added caching to EnrichedEnumJsonConverterFactory. Optional, on by default.
  * Added JsonHelper to support extracting property values from a JSON string (or object)

AllOverIt.AspNetCore
  * Corrected EnrichedEnumModelBinder to consider all base classes to find EnrichedEnum<>
  * Added extension method AddEnrichedEnumModelBinder()
  
AllOverIt.Aws.AppSync.Client
  * Renamed INamedAppSyncClientProvider => IAppSyncNamedClientProvider
  * Renamed extension method AddNamedAppSyncClient() => AddAppSyncNamedClient

AllOverIt.DependencyInjection
  * New package
  * Includes a service decorator and support for auto service registation


10 Feb 2022
======================================================================================================================
MAJOR UPDATE - Due to the number of packages and time spent managing dependencies / versioning all packages will now
               be assigned the same version number. This also helps to establish compatible packages are used together.

Version 5.0.0

AllOverIt
  * BREAKING: Moved a number of extension methods to be closer to their associated classes (hence a namespace change)
  * BREAKING: Moved ReflectionHelper methods SetMemberValue(), GetMemberValue(), and GetMemberType() to
    MemberInfoExtensions as extension methods.