@@ -1,32 +1,47 @@
 using AllOverIt.Fixture;
-using AllOverIt.Serialization.SystemTextJson.Converters;
+using AllOverIt.Serialization.NewtonsoftJson.Converters;
 using FluentAssertions;
+using Newtonsoft.Json;
+using System;
 using System.Collections.Generic;
-using System.Text.Json;
 using Xunit;
 
-namespace AllOverIt.Serialization.SystemTextJson.Tests.Converters
+namespace AllOverIt.Serialization.NewtonsoftJson.Tests.Converters
 {
-    public class StringObjectDictionaryConverterFixture : FixtureBase
+    public class NestedDictionaryConverterFixture : FixtureBase
     {
         private class DummyDictionary
         {
             public Dictionary<string, object> Prop { get; set; }
         }
 
-        private readonly SystemTextJsonSerializer _serializer;
+        private readonly NestedDictionaryConverter _converter;
+        private readonly NewtonsoftJsonSerializer _serializer;
 
-        protected StringObjectDictionaryConverterFixture()
+        protected NestedDictionaryConverterFixture()
         {
-            var converter = new StringObjectDictionaryConverter();
+            _converter = new NestedDictionaryConverter();
 
-            var options = new JsonSerializerOptions();
-            options.Converters.Add(converter);
+            var settings = new JsonSerializerSettings();
+            settings.Converters.Add(_converter);
 
-            _serializer = new SystemTextJsonSerializer(options);
+            _serializer = new NewtonsoftJsonSerializer(settings);
         }
 
-        public class Read : StringObjectDictionaryConverterFixture
+        public class CanConvert : NestedDictionaryConverterFixture
+        {
+            [Theory]
+            [InlineData(typeof(IDictionary<string, object>), false)]
+            [InlineData(typeof(Dictionary<string, object>), true)]
+            public void Should_Return_Expected_CanConvert_Result(Type type, bool expected)
+            {
+                var actual = _converter.CanConvert(type);
+
+                actual.Should().Be(expected);
+            }
+        }
+
+        public class ReadJson : NestedDictionaryConverterFixture
         {
             [Fact]
             public void Should_Read_As_Dictionary()
@@ -45,7 +60,7 @@ namespace AllOverIt.Serialization.SystemTextJson.Tests.Converters
                 };
 
                 var prop2Dictionary = new Dictionary<string, object> {{"Value", prop2.Value}};
-                var prop3Dictionary = new Dictionary<string, object> {{"Value1", prop2Dictionary}, {"Value2", prop1}};
+                var prop3Dictionary = new Dictionary<string, object> {{"Value1", prop2Dictionary }, {"Value2", prop1}};
 
                 var expected = new Dictionary<string, object>
                 {
@@ -61,7 +76,7 @@ namespace AllOverIt.Serialization.SystemTextJson.Tests.Converters
                 expected.Should().BeEquivalentTo(actual.Prop);
             }
 
-            public class Write : StringObjectDictionaryConverterFixture
+            public class WriteJson : NestedDictionaryConverterFixture
             {
                 [Fact]
                 public void Should_Write_Dictionary()
